--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.7",
     "bcrypt": "^5.1.1",
+    "firebase": "^10.7.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
     "next": "14.0.3",
